# test_git_and_github

./: README.md  tox.ini
.github/workflows/: ci.yml
test_lib/: Makefile  pyproject.toml  setup.cfg  test_commit_many.py
test_lib/test_lib/: prime.py
test_lib/tests/: test_prime.py  test_test_lib.py
