[tool.poetry]
name = "test_lib"
version = "0.1.0"
description = ""
authors = ["a-maumau <maumaumaumaumaumaumaumaumaumau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.920"
pre-commit = "^2.16.0"
tox = "^3.24.4"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
